--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html::-webkit-scrollbar{
+  display: none;
+}
+html{
+  scrollbar-width: none;
+}
 /* :root {
   --max-width: 1100px;
   --border-radius: 12px;
